crates/stepflow-execution/tests/snapshots/test_execution__execute_flows.snap
---
source: crates/stepflow-execution/tests/test_execution.rs
description: case 0
expression: result
info:
  name: a
input_file: crates/stepflow-execution/tests/flows/basic.yaml
---
name: b
x: 1
y: 2
