crates/stepflow-execution/tests/snapshots/test_execution__run_tests@basic.yaml-2.snap
---
source: crates/stepflow-execution/tests/test_execution.rs
description: case 1
expression: result
info:
  name: hello
input_file: crates/stepflow-execution/tests/flows/basic.yaml
---
status: success
result:
  name: world
  x: 2
  y: 8
