crates/stepflow-execution/tests/snapshots/test_execution__run_tests@basic.yaml-3.snap
---
source: crates/stepflow-execution/tests/test_execution.rs
description: case 2
expression: result
info:
  name: world
input_file: crates/stepflow-execution/tests/flows/basic.yaml
---
- context: error executing plugin
  attachments: []
  sources:
    - context: error executing user-defined function
      attachments:
        - "Running mock://one_output on ValueRef(OwningRef { owner: Object {\"input\": String(\"world\")}, reference: Object {\"input\": String(\"world\")} })"
      sources: []
