crates/stepflow-execution/tests/snapshots/test_execution__run_tests@conditional_skip_use_default.yaml-3.snap
---
source: crates/stepflow-execution/tests/test_execution.rs
description: case 2
expression: result
info:
  should_skip: false
  value: hello
input_file: crates/stepflow-execution/tests/flows/conditional_skip_use_default.yaml
---
status: success
result:
  dependent_result: received world
