crates/stepflow-execution/tests/snapshots/test_execution__run_tests@conditional_skip_use_default.yaml.snap
---
source: crates/stepflow-execution/tests/test_execution.rs
description: case 0
expression: result
info:
  should_skip: false
  value: a
input_file: crates/stepflow-execution/tests/flows/conditional_skip_use_default.yaml
---
status: success
result:
  dependent_result: received b
